--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "scripts": {
-    "demo": "webpack-dev-server --open",
-    "pack": "webpack --display-modules"
-  },
-  "dependencies": {
-    "react": "16.9.0",
-    "react-dom": "16.9.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/node": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "@babel/preset-react": "7.0.0",
-    "@babel/preset-typescript": "7.0.0",
-    "@types/react": "16.9.0",
-    "@types/react-dom": "16.9.0",
-    "@types/styled-components": "5.1.7",
-    "awesome-typescript-loader": "5.2.1",
-    "css-loader": "3.2.0",
-    "html-webpack-plugin": "3.2.0",
-    "source-map-loader": "0.2.4",
-    "style-loader": "1.0.0",
-    "styled-components": "5.2.1",
-    "ts-loader": "6.0.4",
-    "typescript": "3.8.3",
-    "webpack": "4.39.3",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.8.0"
-  }
+    "scripts": {
+        "pack": "webpack --display-modules",
+        "start": "webpack-dev-server --open"
+    },
+    "dependencies": {
+        "react": "16.9.0",
+        "react-dom": "16.9.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "7.5.5",
+        "@babel/core": "7.5.5",
+        "@babel/node": "7.5.5",
+        "@babel/preset-env": "7.5.5",
+        "@babel/preset-react": "7.0.0",
+        "@babel/preset-typescript": "7.0.0",
+        "@types/react": "16.9.0",
+        "@types/react-dom": "16.9.0",
+        "@types/styled-components": "5.1.7",
+        "awesome-typescript-loader": "5.2.1",
+        "css-loader": "3.2.0",
+        "html-webpack-plugin": "3.2.0",
+        "source-map-loader": "0.2.4",
+        "style-loader": "1.0.0",
+        "styled-components": "5.2.1",
+        "ts-loader": "6.0.4",
+        "typescript": "3.8.3",
+        "webpack": "4.39.3",
+        "webpack-cli": "3.1.0",
+        "webpack-dev-server": "3.8.0"
+    }
 }
